dinesh-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2021-02-12T06:42:18Z"
  labels:
    app: dinesh
  managedFields:
  - apiVersion: v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:labels:
          .: {}
          f:app: {}
      f:spec:
        f:ports:
          .: {}
          k:{"port":80,"protocol":"TCP"}:
            .: {}
            f:port: {}
            f:protocol: {}
            f:targetPort: {}
        f:selector:
          .: {}
          f:app: {}
        f:sessionAffinity: {}
        f:type: {}
    manager: kubectl-expose
    operation: Update
    time: "2021-02-12T06:42:18Z"
  name: dinesh
  namespace: default
  resourceVersion: "62824565"
  selfLink: /api/v1/namespaces/default/services/dinesh
  uid: a85f02d7-bc46-4965-96ac-fecaa1a8a881
spec:
  clusterIP: 172.21.2.83
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: dinesh
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
